[workspace]
resolver = "2"

members = [
    "xelis_common",
    "xelis_wallet",
    "xelis_miner",
    "xelis_daemon",
    "xelis_hash",
]

# cargo run --profile release-with-lto
[profile.release-with-lto]
inherits = "release"
opt-level = 3
debug-assertions = false
overflow-checks = false
lto = true
