[workspace]
resolver = "2"

members = [
    "vyridium_common",
    "vyridium_wallet",
    "vyridium_miner",
    "vyridium_daemon",
    "vyridium_hash",
]

# cargo run --profile release-with-lto
[profile.release-with-lto]
inherits = "release"
opt-level = 3
debug-assertions = false
overflow-checks = false
lto = true
